ios pickked date data render

--- a/src/app/shared/mobile/search-box/search-box.component.tns.html
+++ b/src/app/shared/mobile/search-box/search-box.component.tns.html
@@ -18,4 +18,6 @@
     </StackLayout>
     <Label text="검색" class="btn-search" col="3" (tap)="getSearch()"></Label>
 </GridLayout>
-<NgxDateRange></NgxDateRange>
+<ng-template *ngIf="isIos" #calendar>
+    <NgxDateRange></NgxDateRange>
+</ng-template>
